# weather-companion

./: Makefile  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
environments/prod/: Dockerfile  docker-compose.yml
environments/test/: Dockerfile  docker-compose.yml
src/app/: api.py  model.py  user_repository.py  utils.py
src/weather_companion/: bookmark.py  system.py
src/weather_companion/repository/: __init__.py  errors.py  journal.py  location_bookmark.py
src/weather_companion/system/: __init__.py  system.py
src/weather_companion/weather_journal/: __init__.py  author.py  bookmark.py  filters.py  note.py  weather_journal.py
src/weather_companion/weather_station/: __init__.py  base.py  forecast.py  location.py  open_weather_map.py  owm_client.py  owm_weather_station.py  station.py  weather_state.py  weather_station.py
tests/: test_system.py
tests/weather_companion/system/: test_system.py
tests/weather_companion/weather_journal/: test_filters.py  test_weather_journal.py
tests/weather_companion/weather_station/: test_location.py  test_open_weather_map.py
tests/weather_journal/: test_filters.py  test_weather_journal.py
tests/weather_station/: test_location.py  test_open_weather_map.py
